# EPOCH

./: .env.example  .gitignore  Anchor.toml  README.md  deploy-devnet.sh  package-lock.json  package.json  railway.json  vercel.json
agent/: .env.example  package-lock.json  package.json  tsconfig.json
agent/src/: index.ts  rateOracle.ts  riskModel.ts  x402.d.ts
agent/src/agents/: aggressive.ts  conservative.ts  moderate.ts  types.ts
api/: .env.example  package-lock.json  package.json
api/src/: index.ts
api/src/lib/: solana.ts
api/src/routes/: orderbook.ts  orders.ts
app/: globals.css  layout.tsx  package-lock.json  package.json  page.tsx
app/app/: layout.tsx  page.tsx
app/components/: WalletProviders.tsx
app/lib/: idl.json
programs/epoch-lending/: Cargo.toml
programs/epoch-lending/src/: errors.rs  lib.rs
programs/epoch-lending/src/instructions/: create_market.rs  liquidate.rs  match_orders.rs  mock_liquidate.rs  mod.rs  place_borrow_order.rs  place_lend_order.rs  repay_loan.rs
programs/epoch-lending/src/state/: borrow_order.rs  lend_order.rs  loan.rs  market.rs  mod.rs
scripts/: setup-devnet.ts
tests/: epoch-lending.ts
