[package]
name = "epoch-lending"
version = "0.1.0"
description = "Open-source fixed-rate lending orderbook on Solana"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "epoch_lending"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
pyth-solana-receiver-sdk = "0.6"
